--- a/jquery-pic-run.html
+++ b/jquery-pic-run.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jquery 轮播</title>
-    <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     <style>
         *{
             margin:0;
